Updated Footer Font Size and Colour

--- a/css/tooplate-mini-finance.css
+++ b/css/tooplate-mini-finance.css
@@ -981,9 +981,9 @@ strong {
     }
 }
 
-.copyright-text {
+/*.copyright-text {
   font-size: var(--copyright-font-size);
-}
+}*/
 
 
 /*---------------------------------------
